kubernetes/core/flux-system/flux-instance/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: github-webhook
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-webhook.f9.casa`)
      kind: Rule
      services:
        - name: webhook-receiver
          kind: flux-system
  tls:
    secretName: letsencrypt-tls
